# cleansweep

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
.github/instructions/workflows/: ci.yml
src/: __init__.py  cleansweep.py
src/cleaners/: browser_cache.py  disk_analyzer.py  duplicate_finder.py  scheduler.py  secure_delete.py  startup_manager.py  system_junk.py  uninstaller.py
src/utils/: logger.py  os_helpers.py  prompts.py
tests/: test_disk_analyzer.py  test_duplicate_finder.py
