[metadata]
name = CleanSweep
version = 1.0.0
description = A system cleaner application inspired by CCleaner Pro.
author = Your Name
author_email = bmuzza1992@gmail.com
url = https://github.com/Wiradjuri/cleansweep/
license = MIT

[options]
packages = find:
install_requires =
    psutil
    hashlib
    subprocess
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cleansweep = cleansweep:main

[options.extras_require]
testing =
    pytest
    pytest-cov

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = *Tests
python_functions = test_*

[coverage:run]
branch = True
source = src

[coverage:report]
show_missing = True
skip_covered = True